--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -35,6 +35,7 @@
             <td>Row 1, cell 1</td>
             <td>Row 2, cell 2</td>
             <td>Row 3, cell 3</td>
+            <td>Row 3, cell 3</td>
         </tr>
     </table>
     <p>
