--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -35,9 +35,9 @@
             <td>Row 1, cell 1</td>
             <td>Row 2, cell 2</td>
             <td>Row 3, cell 3</td>
-            <td>Row 3, cell 3</td>
         </tr>
     </table>
+    <h3>some text</h3>
     <p>
         <strong>Note: </strong> It looks the part. but won't do a damned thing
     </p>
