--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -37,7 +37,7 @@
             <td>Row 3, cell 3</td>
         </tr>
     </table>
-    <h3>some text</h3>
+    <p>Hello</p>
     <p>
         <strong>Note: </strong> It looks the part. but won't do a damned thing
     </p>
